feat: update ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
       "particle/*": ["src/*", "*"]
     }
   },
-  "include": [".dumirc.ts", "src/**/*"]
+  "include": [".dumirc.ts", "src/**/*", "docs/**/*"]
 }
