feat: update file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "particle",
+  "name": "yiqianyao_particle",
   "version": "0.0.1",
-  "description": "A react library developed with dumi",
+  "description": "A simple particle lib for three",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
